# sigma_detector

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  THIRD-PARTY-NOTICES.txt  TODOLICENSE.txt  example_verdicts.json  vcpkg.json
src/: CMakeLists.txt
src/app/: CMakeLists.txt  engine_config.cpp  engine_config.h  gui_host.cpp  gui_host.h  gui_launcher.cpp  verdict_buffer.cpp  verdict_buffer.h  verdict_exporter.cpp  verdict_exporter.h
src/app/ui/: CMakeLists.txt  ilistbox.h  main_window.cpp  main_window.h  rule_listbox.cpp  rule_listbox.h  verdict_listbox.cpp  verdict_listbox.h
src/event/: CMakeLists.txt  event.h  speedcheck.cpp  speedcheck_prefixes.cpp  speedcheck_selection_seq_map.cpp  speedcheck_substr.cpp  speedcheck_wildcards.cpp  temp_to_remove.cpp
src/event/logsources/: CMakeLists.txt  channel.h
src/event/logsources/linux/: CMakeLists.txt
src/event/logsources/linux/sysmon/: CMakeLists.txt  sysmon_normalizer.cpp  sysmon_normalizer.h  sysmon_receiver.cpp  sysmon_receiver.h
src/event/logsources/linux/sysmon/tests/: CMakeLists.txt  normalizer_tests.cpp
src/event/logsources/linux/sysmon/tests/res/: event_id_1.txt
src/event/logsources/windows/sysmon/: CMakeLists.txt  sysmon_normalizer.cpp  sysmon_normalizer.h  sysmon_receiver.cpp  sysmon_receiver.h
src/sigma/: CMakeLists.txt  engine.cpp  engine.h
src/sigma/rule_parser/: CMakeLists.txt  condition.cpp  condition.h  encoding_utils.cpp  encoding_utils.h  logsource.cpp  logsource.h  mod_types.h  mod_utils.cpp  mod_utils.h  modifier.cpp  modifier.h  predicate.h  rule.cpp  rule.h  rule_parser.cpp  rule_parser.h  selection.cpp  selection.h  selector.h  selector_context.h  selector_factory.cpp  selector_factory.h  utilities.cpp  utilities.h
src/sigma/rule_parser/tests/: CMakeLists.txt  selector_tests.cpp  utilities_tests.cpp
test_rules/: broken.yaml  notepad++_detection.yaml  notepad++_detection_but_all.yaml  notepad++_detection_but_diff.yaml  notepad++_detection_but_or.yaml  notepad_linux_detection.yaml  unrelated.yaml  русские буквы с пробелом.yaml
